Change name in .desktop files to 'Firewall Manager'

--- a/share/ufw-qt.desktop
+++ b/share/ufw-qt.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Terminal=false
 Exec=su-to-root -X -c /usr/sbin/ufw-qt
-Name=Firewall
+Name=Firewall Manager
 Comment=Manage firewall rules
 Icon=/usr/share/ufw-frontends/icon.png
 Categories=System;Settings;
